# BetterThanCAndD

./: CMakeLists.txt  README.md
src/: TwitchClient.cpp  TwitchClient.hpp  TwitchClientTest.cpp  TwitchClipFetcher.cpp  TwitchClipFetcher.hpp  TwitchClipFetcherTest.cpp  plugin-main.cpp  test.cpp  test.hpp
